*** Facebook for WooCommerce Changelog ***

2020.nn.nn - version 1.10.2-dev.1
 * Tweak - When excluding a product term from syncing in the plugin settings page, offer an option to hide excluded synced products from Facebook
 * Fix - When excluding a product term from syncing in the plugin settings page, ensure a modal opens to warn about possible conflicts with already synced products
 * Dev - Make Pixel script attributes and event parameters filterable

2020.03.10 - version 1.10.1
 * Fix - Prevent Fatal error during the upgrade routine introduced in version 1.10.0
 * Fix - Only load the admin settings JavaScript on the Facebook settings page to prevent conflicts with other scripts
 * Misc - Add support for WooCommerce 4.0

2020.03.03 - version 1.10.0
 * Feature - Exclude specific products, variations, product categories, and product tags from syncing to Facebook
 * Feature - Add Facebook product settings like price and description to variations
 * Feature - Revamped settings screen with on-site control over pixel, product sync, and Messenger behavior
 * Tweak - Use Action Scheduler for the daily forced re-sync, if enabled
 * Fix - Improve pixel tracking accuracy for add-to-cart events
 * Misc - Add the SkyVerge plugin framework as the plugin base
 * Misc - Require WooCommerce 3.5 and above

2019-06-27 - Version 1.9.15
* CSRF handling for Ajax calls like ajax_woo_infobanner_post_click, ajax_woo_infobanner_post_xout, ajax_fb_toggle_visibility
* use phpcs to adhere to WP coding standards
* Minor UI changes on the iFrame

2019-06-20 - Version 1.9.14
* Revisit CSRF security issue
* Remove rest controller which is not used

2019-06-18 - Version 1.9.13
* Fix security issue
* Add more contributors to the plugin

2019-05-02 - Version 1.9.12
* Remove dead code which causes exception (Issue 975)

2019-02-26 - Version 1.9.11
* changing contributor to facebook from facebook4woocommerce, so that